# public/api-docs/swagger.json
@@ -274,7 +274,7 @@
                 }
             }
         },
-        "/comments/list": {
+        "/comments": {
             "get": {
                 "tags": [
                     "/comments \u8bc4\u8bba"
@@ -293,7 +293,7 @@
                         "in": "query",
                         "description": "\u7c7b\u578b",
                         "required": true,
-                        "type": "integer"
+                        "type": "string"
                     },
                     {
                         "name": "page_size",
@@ -339,7 +339,7 @@
                         "in": "query",
                         "description": "\u7c7b\u578b",
                         "required": true,
-                        "type": "integer"
+                        "type": "string"
                     },
                     {
                         "name": "content",
@@ -418,6 +418,13 @@
                         "description": "\u7ad9\u70b9ID",
                         "required": true,
                         "type": "string"
+                    },
+                    {
+                        "name": "type",
+                        "in": "query",
+                        "description": "\u7c7b\u578b",
+                        "required": true,
+                        "type": "integer"
                     },
                     {
                         "name": "page_size",
@@ -1445,6 +1452,243 @@
                 }
             }
         },
+        "/questions/comments/create": {
+            "get": {
+                "tags": [
+                    "/questions \u95ee\u7b54"
+                ],
+                "summary": "\u53d1\u8868\u95ee\u7b54\u8bc4\u8bba",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "description": "\u95ee\u7b54ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "content",
+                        "in": "query",
+                        "description": "\u8bc4\u8bba\u95ee\u7b54",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "token",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u8bc4\u8bba\u6210\u529f"
+                    },
+                    "404": {
+                        "description": "\u6ca1\u6709\u627e\u5230"
+                    }
+                }
+            }
+        },
+        "/surveys/list": {
+            "get": {
+                "tags": [
+                    "/surveys \u95ee\u5377"
+                ],
+                "summary": "\u83b7\u53d6\u95ee\u5377\u5217\u8868",
+                "parameters": [
+                    {
+                        "name": "site_id",
+                        "in": "query",
+                        "description": "\u7ad9\u70b9ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "page_size",
+                        "in": "query",
+                        "description": "\u5206\u9875\u5927\u5c0f",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "\u5206\u9875\u5e8f\u53f7",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u67e5\u8be2\u6210\u529f"
+                    },
+                    "404": {
+                        "description": "\u6ca1\u6709\u627e\u5230\u8def\u7531"
+                    }
+                }
+            }
+        },
+        "/surveys/slides": {
+            "get": {
+                "tags": [
+                    "/surveys \u95ee\u5377"
+                ],
+                "summary": "\u83b7\u53d6\u95ee\u5377\u8f6e\u64ad\u56fe",
+                "parameters": [
+                    {
+                        "name": "site_id",
+                        "in": "query",
+                        "description": "\u7ad9\u70b9ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "page_size",
+                        "in": "query",
+                        "description": "\u5206\u9875\u5927\u5c0f",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "\u5206\u9875\u5e8f\u53f7",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u67e5\u8be2\u6210\u529f"
+                    },
+                    "404": {
+                        "description": "\u6ca1\u6709\u627e\u5230\u8def\u7531"
+                    }
+                }
+            }
+        },
+        "/surveys/create": {
+            "post": {
+                "tags": [
+                    "/surveys \u95ee\u5377"
+                ],
+                "summary": "\u63d0\u4ea4\u95ee\u5377",
+                "parameters": [
+                    {
+                        "name": "survey_id",
+                        "in": "query",
+                        "description": "\u8c03\u67e5ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "item_ids",
+                        "in": "query",
+                        "description": "\u9009\u9879ID",
+                        "required": true,
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "token",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u63d0\u4ea4\u95ee\u5377\u6210\u529f"
+                    },
+                    "404": {
+                        "description": "\u6ca1\u6709\u627e\u5230"
+                    }
+                }
+            }
+        },
+        "/surveys/detail": {
+            "get": {
+                "tags": [
+                    "/surveys \u95ee\u5377"
+                ],
+                "summary": "\u83b7\u53d6\u95ee\u5377\u8be6\u60c5\u9875",
+                "parameters": [
+                    {
+                        "name": "survey_id",
+                        "in": "query",
+                        "description": "\u95ee\u5377ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "site_id",
+                        "in": "query",
+                        "description": "\u7ad9\u70b9ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "token",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u67e5\u8be2\u6210\u529f"
+                    },
+                    "404": {
+                        "description": "\u6ca1\u6709\u627e\u5230\u8def\u7531"
+                    }
+                }
+            }
+        },
+        "/surveys/likes": {
+            "get": {
+                "tags": [
+                    "/surveys \u95ee\u5377"
+                ],
+                "summary": "\u70b9\u8d5e",
+                "parameters": [
+                    {
+                        "name": "survey_id",
+                        "in": "query",
+                        "description": "\u95ee\u5377ID",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "type",
+                        "in": "query",
+                        "description": "\u70b9\u8d5e\u7c7b\u578b(0:\u53d6\u6d88\u70b9\u8d5e,1:\u70b9\u8d5e)",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "token",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u67e5\u8be2\u6210\u529f"
+                    },
+                    "404": {
+                        "description": "\u6ca1\u6709\u627e\u5230\u8def\u7531"
+                    }
+                }
+            }
+        },
         "/videos/list": {
             "get": {
                 "tags": [
@@ -1608,6 +1852,204 @@
                     },
                     "404": {
                         "description": "\u6ca1\u6709\u627e\u5230"
+                    }
+                }
+            }
+        },
+        "/votes/list": {
+            "get": {
+                "tags": [
+                    "/votes \u6295\u7968"
+                ],
+                "summary": "\u83b7\u53d6\u6295\u7968\u5217\u8868",
+                "parameters": [
+                    {
+                        "name": "site_id",
+                        "in": "query",
+                        "description": "\u7ad9\u70b9ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "page_size",
+                        "in": "query",
+                        "description": "\u5206\u9875\u5927\u5c0f",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "\u5206\u9875\u5e8f\u53f7",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u67e5\u8be2\u6210\u529f"
+                    },
+                    "404": {
+                        "description": "\u6ca1\u6709\u627e\u5230\u8def\u7531"
+                    }
+                }
+            }
+        },
+        "/votes/slides": {
+            "get": {
+                "tags": [
+                    "/votes \u6295\u7968"
+                ],
+                "summary": "\u83b7\u53d6\u6295\u7968\u8f6e\u64ad\u56fe",
+                "parameters": [
+                    {
+                        "name": "site_id",
+                        "in": "query",
+                        "description": "\u7ad9\u70b9ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "page_size",
+                        "in": "query",
+                        "description": "\u5206\u9875\u5927\u5c0f",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "\u5206\u9875\u5e8f\u53f7",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u67e5\u8be2\u6210\u529f"
+                    },
+                    "404": {
+                        "description": "\u6ca1\u6709\u627e\u5230\u8def\u7531"
+                    }
+                }
+            }
+        },
+        "/votes/create": {
+            "post": {
+                "tags": [
+                    "/votes \u6295\u7968"
+                ],
+                "summary": "\u63d0\u4ea4\u6295\u7968",
+                "parameters": [
+                    {
+                        "name": "vote_id",
+                        "in": "query",
+                        "description": "\u6295\u7968ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "item_ids",
+                        "in": "query",
+                        "description": "\u9009\u9879ID",
+                        "required": true,
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "token",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u6295\u7968\u6210\u529f"
+                    },
+                    "404": {
+                        "description": "\u6ca1\u6709\u627e\u5230"
+                    }
+                }
+            }
+        },
+        "/votes/detail": {
+            "get": {
+                "tags": [
+                    "/votes \u6295\u7968"
+                ],
+                "summary": "\u83b7\u53d6\u6295\u7968\u8be6\u60c5\u9875",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "description": "\u6295\u7968ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "site_id",
+                        "in": "query",
+                        "description": "\u7ad9\u70b9ID",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "token",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u67e5\u8be2\u6210\u529f"
+                    },
+                    "404": {
+                        "description": "\u6ca1\u6709\u627e\u5230\u8def\u7531"
+                    }
+                }
+            }
+        },
+        "/votes/likes": {
+            "get": {
+                "tags": [
+                    "/votes \u6295\u7968"
+                ],
+                "summary": "\u70b9\u8d5e",
+                "parameters": [
+                    {
+                        "name": "vote_id",
+                        "in": "query",
+                        "description": "\u6295\u7968ID",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "type",
+                        "in": "query",
+                        "description": "\u70b9\u8d5e\u7c7b\u578b(0:\u53d6\u6d88\u70b9\u8d5e,1:\u70b9\u8d5e)",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "token",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u67e5\u8be2\u6210\u529f"
+                    },
+                    "404": {
+                        "description": "\u6ca1\u6709\u627e\u5230\u8def\u7531"
                     }
                 }
             }
